# ecg-explorer

./: .gitignore  explorer_ui.py  main.py  pyproject.toml
detectors/: qrs_detectors.py
explorer/: ECGExplorer.py
filters/: ecg_signal_filter.py
frontend/: annotated_cursor.py  app_variables.py  constants.py  models.py  utils.py
frontend/observers/: annotations_manager.py  container_manager.py  filter_config_manager.py  leads_manager.py  observer_abc.py
frontend/span/: span.py  spans_manager.py
frontend/ui_components/: bottom_frame.py  leads_menu.py  plot_handler.py  top_frame.py
installer/: explorer_ui.spec  pyinstaller.sh  version.rc
models/: annotation.py  ecg.py  span.py  ui_models.py
