[tool.poetry]
name = "ecg-explorer"
version = "0.1.0"
description = ""
authors = ["xavier sulkowski <xaviersulkowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pydicom = "^2.4.3"
matplotlib = "^3.8.0"
scipy = "^1.11.3"
tk = "^0.1.0"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pyinstaller = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
